<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/large_margin"
    android:id="@+id/scroller"
    >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/large_margin"
    android:gravity="center_horizontal"
    >

 <Button
    android:layout_width="@dimen/button_width"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:id="@+id/advisory"
    android:text="@string/advisory"
    />
    
 <Button
    android:layout_width="@dimen/button_width"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:id="@+id/photos"
    android:text="@string/photos"
    />
    
  <Button
    android:layout_width="@dimen/button_width"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:id="@+id/videos"
    android:text="@string/videos"
    />
    
  <Button
    android:layout_width="@dimen/button_width"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:id="@+id/weather"
    android:text="@string/weather"
    />
    
  <WebView
    android:layout_width="fill_parent"
    android:layout_height="220dp"
    android:id="@+id/map"
    android:layout_margin="@dimen/standard_margin"
    />

<Button
    android:layout_width="@dimen/button_width"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:id="@+id/submit"
    android:text="@string/submit_obs"
    />
    
<Button
    android:layout_width="@dimen/button_width"
    android:layout_height="wrap_content"
    android:textSize="@dimen/med_text"
    android:id="@+id/full_site"
    android:text="@string/full_site"
    android:layout_marginBottom="@dimen/large_margin"
    />
    
</LinearLayout>
</ScrollView>
